--- a/templates/pages/playlist.html.twig
+++ b/templates/pages/playlist.html.twig
@@ -12,6 +12,9 @@
             <br /><br />
             <strong>description :</strong><br />
                 {{ playlist.description|nl2br }}
+                <br /><br />
+            <strong>nombre de formations :</strong><br />{{ 
+                playlistformations|length}}
         </div>
         <div class="col">
             <!-- boucle sur l'affichage des formations -->
