--- a/templates/baseadmin.html.twig
+++ b/templates/baseadmin.html.twig
@@ -1,28 +1,30 @@
 {% extends "base.html.twig" %}
 
-{% block title %}{% endblock %}
-{% block stylesheets %}{% endblock %}
+{% block title %}Tableau de Bord Admin{% endblock %}
+
 {% block top %}
     <div class="container">
+        <div class="text-center">
+            <h1>Bienvenue sur le Tableau de Bord Admin</h1>
+        </div>
         <div class="text-end">
             <a href="{{ path('logout') }}"><h5>Déconnexion</h5></a>
         </div>
         <div class="text-left">
             <img src="{{ app.request.getBasePath()~'/banniere.jpg' }}" alt="Image de la bannière">
         </div>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ path('admin.formations') }}"><h3>Formations</h3></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ path('admin.playlists') }}"><h3>Playlists</h3></a>
-                    </li> 
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ path('admin.categories') }}"><h3>Catégories</h3></a>
-                    </li> 
-            </div>
-        </nav>    
-                        </div>
+        <nav>
+            <ul>
+                <li>
+                    <a href="{{ path('admin.formations') }}"><h5>Formations</h5></a>
+                </li>
+                <li>
+                    <a href="{{ path('admin.playlists') }}"><h5>Playlists</h5></a>
+                </li>
+                <li>
+                    <a href="{{ path('admin.categories') }}"><h5>Catégories</h5></a>
+                </li>
+            </ul>
+        </nav>
+    </div>
 {% endblock %}
