--- a/templates/basefront.html.twig
+++ b/templates/basefront.html.twig
@@ -11,26 +11,20 @@
         <div class="text-left">
             <img src="{{ app.request.getBasePath()~'/banniere.jpg' }}" alt="image de la banniere">
         </div>
-        
         <!-- menu -->
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ path('accueil') }}">Accueil</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ path('formations') }}">Formations</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ path('playlists') }}">Playlists</a>
-                    </li>
-                    {#<li class="nav-item">
-                        <a class="nav-link" href="{{ path('admin.formations') }}">Gestion</a>
-                    </li>   #}                  
-                </ul>
-            </div>
-        </nav>        
+                 <nav>
+            <ul>
+                <li>
+                    <a href="{{ path('accueil') }}"><h5>Accueil</h5></a>
+                </li>
+                <li>
+                    <a href="{{ path('formations') }}"><h5>Formations</h5></a>
+                </li>
+                <li>
+                    <a href="{{ path('playlists') }}"><h5>Playlists</h5></a>
+                </li>
+            </ul>
+        </nav>
     </div>
 {% endblock %}
 {% block body %}{% endblock %}
